Not sure if this is the right version

--- a/index.html
+++ b/index.html
@@ -20,3 +20,18 @@ layout: landing
 							</header>
 						</div>
 					</section>
+				<!-- Two -->
+					<section id="two" class="wrapper style2 special">
+						<div class="inner">
+							<header class="major">
+								<h2>Upcoming Performances</h2>
+							</header>
+							<ul>
+									<li class="features"><h3>6<sup>th</sup> Jan, 2017</h3> <p>&nbsp State Bank of India, Indore</p></li>
+									<li class="features"><h3>13<sup>th</sup> Jan, 2017</h3> <p>&nbsp Symbiosis University, Pune</p></li>
+									<li class="features"><h3>12<sup>th</sup> Feb, 2017</h3> <p>&nbsp Kala Ghoda Arts Festival, Mumbai</p></li>
+									</ul>
+									<p>For enquiries email: <a href="mailto:contact@nayantaraparpia.com" target="_blank">contact@nayantaraparpia.com</p>
+						</div>
+					</section>
+				
