Added Kathak Classes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: landing
 							</header>
 						</div>
 					</section>
-				<!-- Two -->
+				<!-- Commented out section two 
 					<section id="two" class="wrapper style2 special">
 						<div class="inner">
 							<header class="major">
@@ -33,5 +33,5 @@ layout: landing
 									</ul>
 									<p>For enquiries email: <a href="mailto:contact@nayantaraparpia.com" target="_blank">contact@nayantaraparpia.com</p>
 						</div>
-					</section>
+					</section> -->
 				
