--- a/index.html
+++ b/index.html
@@ -20,18 +20,16 @@ layout: landing
 							</header>
 						</div>
 					</section>
-				<!-- Commented out section two 
 					<section id="two" class="wrapper style2 special">
 						<div class="inner">
 							<header class="major">
 								<h2>Upcoming Performances</h2>
 							</header>
 							<ul>
-									<li class="features"><h3>6<sup>th</sup> Jan, 2017</h3> <p>&nbsp State Bank of India, Indore</p></li>
-									<li class="features"><h3>13<sup>th</sup> Jan, 2017</h3> <p>&nbsp Symbiosis University, Pune</p></li>
-									<li class="features"><h3>12<sup>th</sup> Feb, 2017</h3> <p>&nbsp Kala Ghoda Arts Festival, Mumbai</p></li>
+									<li class="features"><h3>29<sup>th</sup> Sep, 2017</h3> <p>&nbsp <a href=http://jkk.artandculture.rajasthan.gov.in/content/ArtandCulture/en/jawahar-kala-kendra.html target=_blank>Jawahar Kala Kendra, Jaipur</a></p></li>
+							   <!-- <li class="features"><h3>13<sup>th</sup> Jan, 2017</h3> <p>&nbsp Symbiosis University, Pune</p></li>
+									<li class="features"><h3>12<sup>th</sup> Feb, 2017</h3> <p>&nbsp Kala Ghoda Arts Festival, Mumbai</p></li> -->
 									</ul>
 									<p>For enquiries email: <a href="mailto:contact@nayantaraparpia.com" target="_blank">contact@nayantaraparpia.com</p>
 						</div>
-					</section> -->
-				
+					</section>
